--- a/src/components/organisms/ComicSeries/style.module.scss
+++ b/src/components/organisms/ComicSeries/style.module.scss
@@ -1,7 +1,12 @@
 .list {
-  border-top: 1px solid #000;
+  border-top: 1px solid #00acee;
 }
 
 .item {
-  border-bottom: 1px solid #000;
+  border-bottom: 1px solid #00acee;
+}
+
+.link {
+  display: block;
+  padding: 12px 0;
 }
