--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,5 @@
-@import "styles/constants";
-@import "sass-mq";
+@import 'styles/constants';
+@import 'sass-mq';
 
 html {
   font: 62.5% arial, sans-serif;
@@ -9,6 +9,11 @@ html {
 
 body {
   font-size: 1.6rem;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
 ul,
