--- a/src/components/organisms/Footer/style.module.scss
+++ b/src/components/organisms/Footer/style.module.scss
@@ -1,5 +1,7 @@
+@import 'styles/mixins';
+
 .footer {
-  background: #333;
+  background: #00acee;
   color: #fff;
   display: grid;
   font-size: 1.2rem;
@@ -9,5 +11,5 @@
 }
 
 .inner {
-  padding: 0 24px;
+  @include global-padding;
 }
